@@ -1,0 +1,3 @@
+#taskworp {
+  width: 150px;
+}
