@@ -1,1 +1,3 @@
 <link href="${request.static_path('plorma:static/css/sprintboard.css')}" rel="stylesheet" media="screen">
+<link href="${request.static_path('plorma:static/css/widgets.css')}" rel="stylesheet" media="screen">
+<script src="${request.static_path('plorma:static/js/taskworp.js')}"></script>
