@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-      % if len(h.get_modules(request, 'admin-menu')) > 0:
-        <ul class="list-unstyled">
+        <ul class="list-inline list-unstyled">
+          % if len(h.get_modules(request, 'admin-menu')) > 0:
           <li class="dropdown dropup">
             <a href="#" data-toggle="dropdown"><img src="${request.static_path('ringo:static/images/icons/16x16/applications-system.png')}"/>${_('Administration')}<b class="caret"></b></a>
             <ul class="dropdown-menu dropup-menu" role="menu">
@@ -11,8 +11,15 @@
               % endfor
             </ul>
           </li>
+          % endif
+          <li>
+            <div class="input-group" id="taskworp">
+              <input type="text" title="${_('To directly open a task please enter the task ID')}" class="form-control" placeholder="#TaskID"> <span class="input-group-btn">
+                <button class="btn btn-default" type="button">${_('Go')}</button>
+              </span>
+            </div><!-- /input-group -->
+          </li>
         </ul>
-      % endif
     </div>
     <div class="col-sd-6">
       <ul class="list-inline pull-right">
